WIP: Fix "Show deleted resources" button in the Resources Manager

KisTagFilterResourceProxyModel internally owns two separate models
that are switches depending on the current filter settings. When we
change the settings for "show deleted resoruces", we sould cahnge
that in both internal models.

BUG:446801